--- a/src/assets/styles/pages/inicio.css
+++ b/src/assets/styles/pages/inicio.css
@@ -1,8 +1,8 @@
 .gifinicio{
     width: 100%;
-    padding-top: var(--spacer-l);
-    padding-bottom: var(--spacer-l);
-    margin-bottom: var(--spacer-l);
+    padding-top: ;
+    padding-bottom: ;
+    margin-bottom: ;
     justify-content: center;
     align-content: center;
 }
@@ -24,8 +24,8 @@
 
 .iniciotext {
     line-height: 1.2;
-    margin-top: var(--spacer-3xl);
-    padding-top: 15vh;
+    margin-top: var(--spacer-2xl);
+    padding-top: 17vh;
     padding-bottom: var(--spacer-m);
     padding-left: var(--spacer-xl);
     padding-right: var(--spacer-l);
