--- a/src/_includes/components/project.njk
+++ b/src/_includes/components/project.njk
@@ -1,4 +1,5 @@
 
-    <a data-fancybox="gallery" class="fotosinicio" href="/assets/images/{{elemento.imagen}}">
-      <img  class="fotosinicio"src="/assets/images/{{elemento.imagen}}" alt="">
+   
+<a data-fancybox="gallery" class="portada col-4 col-md-3 col-sm-3 col-xs-2" href="/assets/images/{{elemento.imagen}}">
+      <img  class="projectfoto" src="/assets/images/{{elemento.imagen}}" alt="">
     </a>
