--- a/src/_includes/layouts/general/footer.njk
+++ b/src/_includes/layouts/general/footer.njk
@@ -1,6 +1,18 @@
   <div class="footer">
     <div class="container grid">
-      <div class="col-12">
+        <div class="col-2 rrss">
+            <a class="insta" href="https://www.instagram.com/essenciainteriorismo/">instagram</a>
+            <br>
+            <a class="face" href="https://www.facebook.com/EssenciaInteriorismo">facebook</a>
+        </div>
+        <div class="col-3 footer-contacto">
+            <a class="mail" href="mailto:hola@eïnai.com">hola@eïnai.com</a>
+            <br>
+            <a class="direccion">C/ San Francesc de Borja, 39 2A 46701 Gandía</a>
+            <br>
+            <a class="tlf">633 57 59 82</a>
+        </div>
+        <div class="col-12 marca">
         <a> &#169 EÏNAI Interioristas</a>
       </div>
     </div>
@@ -12,5 +24,11 @@
 <script type="module">
   import { Fancybox } from "https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.esm.js";
 </script>
+<!-- Slider Slick -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script  src="/assets/scripts/Slider.js"></script>
+				
   </body>
 </html>
