--- a/src/_includes/layouts/general/header.njk
+++ b/src/_includes/layouts/general/header.njk
@@ -1,26 +1,34 @@
 <div class="header">
 
   <div class="container">
+
       <a href="/" class="header-logo">
           <img src="/assets/images/Logo.png" alt="">
       </a>
-      <button class="header-nav-icon">
-          <img src="/assets/images/Nav.png" alt="">
-      </button>
-      <button class="header-nav-icon2">
-          <img src="/assets/images/Nav2.png" alt="">
-      </button>
 
     {% set navPages = collections.all | eleventyNavigation %}
     <div class="nav">
       {%- for elemento in navPages %}
-        <a href="{{ elemento.url | url }}"
-          {% if elemento.url == page.url %} class="active"{% endif %}
-        >
+        <a href="{{ elemento.url | url }}"{% if elemento.url == page.url %} class="active"{% endif %}>
           {{ elemento.title }}
         </a>
       {%- endfor %}
     </div>
+      
+      {% set navPages = collections.all | eleventyNavigation %}
+    <div class="nav-2">
+      {%- for elemento in navPages %}
+        <a href="{{ elemento.url | url }}"{% if elemento.url == page.url %} class="active"{% endif %}>
+          {{ elemento.title }}
+        </a>
+      {%- endfor %}
+    </div>
+      
+    <button class="hamburger hamburger--spring" type="button">
+     <span class="hamburger-box">
+     <span class="hamburger-inner"></span>
+     </span>
+    </button>
 
   </div>
 
