--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -24,5 +24,7 @@
 @import url("pages/inicio.css");
 @import url("pages/servicios.css");
 @import url("pages/contacto.css");
+@import url("pages/proyectos.css");
+@import url("pages/hamburgers.css");
 
 /* Blocks */
