--- a/src/assets/styles/variables/v-color.css
+++ b/src/assets/styles/variables/v-color.css
@@ -1,6 +1,11 @@
 html{
     --blau:#293357;
     --blau2:#687CB5;
+    --blau3:#b9c8ed;
     --blanc:#DEDEDE;
+    --marro:#dad2bc;
+    --marro2:#a99985;
+    --kraft:#a9937c;
+    --kraft2:#b2947c;
 
 }
