--- a/src/assets/styles/variables/v-typography.css
+++ b/src/assets/styles/variables/v-typography.css
@@ -19,6 +19,7 @@ html {
   /* Escala aplicada */
   --text-caption: 14px;
   --text-note: 16px;
+  --text-medium: 18px;
   --text-base: 20px;
   --text-subheader: 24px;
   --text-titlelit: 30px;
