--- a/src/contacto.njk
+++ b/src/contacto.njk
@@ -4,11 +4,12 @@ title: EINIAI-Contacto
 eleventyNavigation:
   key: contacto
   title: Contacto
-  order: 2
+  order: 3
 ---
 
-<div class="col-5 col-md-4 col-sm-3 col-sx-6 contacto-titulo">
-  <h1 class="text-headline">CONTACTO</h1>
+<div class="col-5 col-md-4 col-sm-3 col-sx-6">
+    <img class="foto-contacto" src="/assets/images/fulla_03.png" alt="">
+  <h1 class="contacto-titulo">CONTACTO</h1>
  </div>
 <form class="col-7 col-md-6 col-sm-5 col-sx-6 contacto-form">
     ¡Hola!<br>
@@ -22,3 +23,7 @@ eleventyNavigation:
     ¡Gracias!<br>
     <button type="submit" class="contacto-enviar">ENVIAR</button>
 </form>
+
+<!--<div class="foto-contacto">
+    <img class="foto-contacto" src="/assets/images/foto.png" alt="">
+</div>-->
