--- a/src/servicios.njk
+++ b/src/servicios.njk
@@ -4,31 +4,35 @@ title: EINIAI-Servicios
 eleventyNavigation:
   key: servicios
   title: Servicios
-  order: 1
+  order: 2
 ---
 
 <div class="grid caja-servicio">
    
        <div class="col-5 col-md-5 col-sm-8 servicios-text">
            <h1 class="servicio">DISEÑOS, ARQUITECTURA Y DECORACIÓN:</h1>
-       <p>Cuéntanos tus ideas y la llevaremos a cabo.   </p>
+       <p>Cuéntanos tus ideas y la llevaremos a cabo.</p>
+           <h1 class="servicio-eng spacer-2xl">DESIGNS, ARCHITECTURE AND DECORATION:</h1>
+       <p class="text-eng">Tell us your ideas and we will implement them.</p>
        </div>
        
    <div class="col-7 col-md-5 col-sm-8 fotos-servicios-der">    
-         {% set elemento = {"imagen": "06.jpg"} %}
+         {% set elemento = {"imagen": "EXTERIOR_03.jpg"} %}
          {% include 'components/inicio.njk' %}
    </div>
 </div>
 
 <div class="grid caja-servicio">
     <div class="col-7 col-md-5 col-sm-8 fotos-servicios-izq">
-      {% set elemento = {"imagen": "13.jpg"} %}
+      {% set elemento = {"imagen": "COCINA_07.png"} %}
       {% include 'components/inicio.njk' %}
     </div>
 
     <div class="col-5 col-md-5 col-sm-8 servicios-text-der">
         <h1 class="servicio">PROYECTOS Y REFORMAS:</h1>
     <p>Le daremos forma a tus proyectos, al igual que a los rincones que quieras cambiar en tu hogar.</p>
+        <h1 class="servicio-eng spacer-2xl">PROJECTS AND REFORMS:</h1>
+    <p class="text-eng">We will give shape to your projects, as well as to the corners you want to change in your home.</p>
     </div>
 </div>
 
@@ -36,22 +40,26 @@ eleventyNavigation:
     <div class="col-5 col-md-5 col-sm-8 servicios-text">
         <h1 class="servicio">INFOGRAFÍA 3D:</h1>
     <p>Descubre como tus ideas se hacen realidad. Te enseñamos tu proyecto terminado antes de empezarlo.</p>
+        <h1 class="servicio-eng spacer-xl">3D INFOGRAPHY:</h1>
+    <p class="text-eng">Discover how your ideas become reality. We show you your finished project before you start it.</p>
     </div>
    
     <div class="col-7 col-md-5 col-sm-8 fotos-servicios-der">
-      {% set elemento = {"imagen": "07.png"} %}
+      {% set elemento = {"imagen": "INFOGRAFIA_01.jpg"} %}
       {% include 'components/inicio.njk' %}
     </div>
 </div>
 
 <div class="grid caja-servicio">
     <div class="col-7 col-md-5 col-sm-8 fotos-servicios-izq">
-      {% set elemento = {"imagen": "15.jpg"} %}
+      {% set elemento = {"imagen": "INTERIORISMO_12.jpeg"} %}
       {% include 'components/inicio.njk' %}
     </div>
 
     <div class="col-5 col-md-5 col-sm-8 servicios-text-der">
         <h1 class="servicio">CONTRACT:</h1>
     <p>Sabemos la importancia del interiorismo en un negocio. Nos encargamos de conseguir el local de tus sueños y el de tus clientes.</p>
+        <h1 class="servicio-eng spacer-xl">CONTRACT:</h1>
+    <p class="text-eng">We know the importance of interior design in a business. We take care of getting the place of your dreams and that of your customers.</p>
     </div>
 </div>
